--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-modal": "^3.12.1",
     "react-scripts": "4.0.3",
+    "react-youtube": "^7.13.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
